# llm-eval

./: .gitignore  README.md  config.py  evaluation.ipynb  human_annotator.py  main.py  main_api.py  main_ministral.py  main_phi.py  model_choise.ipynb  pyproject.toml  run_llm_eval.sbatch
data/: models.csv  nq_dev_augmented.jsonl  nq_dev_augmented_translated.jsonl  prepare_nq_translatio.ipynb
job_logs/: llm-eval-4684490.err  llm-eval-4684490.out  llm-eval-4684491.err  llm-eval-4684491.out  llm-eval-4687442.err  llm-eval-4687442.out
results/: human_annotations.jsonl  results_gemini_3_flash_preview.jsonl  results_google__gemma-3-12b-it.jsonl  results_meta-llama__Meta-Llama-3-8B-Instruct.jsonl  results_microsoft__phi-4.jsonl  results_mistralai__Ministral-3-8B-Instruct-2512.jsonl
